# siasun_2dnavigation

./: CMakeLists.txt  CMakeLists.txt.user.8b1675f  版本说明.txt
MappingNavigation_3.0.4test/src/Modules/Csm/: CMakeLists.txt
src/App/NavApp/: CMakeLists.txt  NavApp.pro
src/App/NavApp/include/: LocalizeFactory.h  RoboManager.h
src/App/NavApp/src/: LocalizeFactory.cpp  RoboManager.cpp  main.cpp
src/Modules/Carto/: CMakeLists.txt  Carto.pro  NaviInterface.h  carto_global.h  msg_conversion.h  navigation.cpp  node.cpp  node.h
src/Modules/Carto/common/include/: blocking_queue.h  mutex.h  mylogging.h  mymath.h  optional.h  port.h  rate_timer.h
src/Modules/Carto/mapping/include/: constraint_builder_2d.h  global_trajectory_builder.h  grid_2d.h  id.h  imu_tracker.h  local_slam_result_data.h  map_builder_interface.h  motion_filter.h  optimization_problem_2d.h  optimization_problem_interface.h  options.h  pose_extrapolator.h  pose_graph_2d.h  probability_grid_range_data_inserter_2d.h  range_data_inserter_interface.h  real_time_correlative_scan_matcher_2d.h  submap_2d.h  submaps.h  test_fast_match.h
src/Modules/Carto/myceres/include/: block_sparse_matrix.h  block_structure.h  dense_sparse_matrix.h  eigen.h  fixed_array.h  location.h  manual_constructor.h  optimize_pose_graph.h  pointCloud_T.h  port.h  scoped_ptr.h  trust_region_step_evaluator.h
src/Modules/Carto/sensor/include/: collator.h  collator_interface.h  data.h  map_by_time.h  point_cloud.h  voxel_filter.h
src/Modules/Carto/transform/include/: rigid_transform.h
src/Modules/Diagnosis/: CMakeLists.txt  Diagnosis.pro
src/Modules/Diagnosis/include/: DDSTask.h  LCMTask.h  LcmCloudAdjusted.h  LocalizationTest_Msg.h  lcmtype.h
src/Modules/Diagnosis/src/: DDSTask.cpp  Diagnosis.cpp  LCMTask.cpp  LocalizationTest_Msg.c  robot_control_t.c
src/Modules/Diagnosis/src/WebtoolServer/: webserver.h
src/Modules/Feature/: CMakeLists.txt
src/Modules/Feature/FeatureMatch/include/: CMatrix.h  LeastSquareMethod.h  LineMatchPair.h  PointMatchList.h  PointMatchPair.h
src/Modules/Feature/FeatureObject/include/: EdgeFeature.h  Feature.h  FeatureCreationParam.h  FeatureMap.h  FeatureSet.h  FlatReflectorFeature.h  GenericPointFeature.h  LineFeature.h  LineFeatureSet.h  PointFeature.h  PointFeatureSet.h  ReflFeatureCreateParam.h
src/Modules/Geometry/: CMakeLists.txt  Geometry.pro
src/Modules/Geometry/src/: AffinePosture.cpp  Angle.cpp  Circle.cpp  Direct.cpp  Frame.cpp  LineBase.cpp  MultiSegLine.cpp  NewCurve.cpp  Pnt.cpp  PolyRegion.cpp  Spline.cpp  Spp.cpp  Transfor.cpp
src/Modules/Methods/: CMakeLists.txt  Methods.pro
src/Modules/Methods/FastMatchMethod/src/: FastMatchMethod.cpp
src/Modules/Methods/FeatureMethod/include/: FeatureLocArea.h  FeatureLocalization.h  FeatureMethod.h
src/Modules/Methods/FeatureMethod/src/: FeatureLocalization.cpp  FeatureMethod.cpp  FeatureScan.cpp
src/Modules/Methods/Manager/include/: LocalizationMethod.h  LocalizationParam.h  LocalizationPlan.h
src/Modules/Methods/Manager/src/: LocalizationManager.cpp  LocalizationMethod.cpp  LocalizationMethods.cpp  LocalizationPlan.cpp
src/Modules/Methods/NdtMethod/src/: NdtLocArea.cpp
src/Modules/Methods/ScanMatchMethod/include/: ScanMatchLocArea.h  ScanMatchMethod.h
src/Modules/Methods/ScanMatchMethod/src/: ScanMatchLocArea.cpp
src/Modules/Methods/SlamMethod/include/: SlamLocArea.h
src/Modules/Methods/SlamMethod/src/: SlamLocArea.cpp
src/Modules/Methods/TemplateMethod/include/: TemplateMethod.h
src/Modules/Methods/TemplateMethod/src/: TemplateLocArea.cpp  TemplateMethod.cpp
src/Modules/NavBase/: CMakeLists.txt  NavBase.pro
src/Modules/NavBase/BlackBox/include/: MemFileMap.h  NvBlackBox.h  NvRamChannel.h  blackboxhelper.hpp
src/Modules/NavBase/BlackBox/src/: BlackBox.cpp  NvRamChannel.cpp  ShareMem.cpp
src/Modules/NavBase/CanDev/include/: CanGyro.h  CanMan.h
src/Modules/NavBase/CanDev/src/: CanGyro.cpp  CanMan.cpp
src/Modules/NavBase/LaserDrivers/: LaserDrivers.pro
src/Modules/NavBase/LaserSensor/: LaserSensor.pro
src/Modules/NavBase/LaserSensor/include/: BlueSeaLaser.h  BlueSeaLaser50c.h  BlueSeaLaserE320.h  FRR2LaserScanner.h  HokuyoLaserScanner.h  LeimouF30LaserScanner.h  ScannerParam.h---  SensorFamily.h  laser_t.h
src/Modules/NavBase/LaserSensor/src/: BlueSeaLaser.cpp  BlueSeaLaser50c.cpp  FRR2LaserScanner.cpp  HokuyoLaserScanner.cpp  ScannerParam.cpp---  SensorFamily.cpp  Sick581LaserScanner.cpp  SickSafetyLaserScanner.cpp  WJ716LaserScanner.cpp
src/Modules/NavBase/Mapping/include/: BuildMap.h  Calibrate.h  LaserMapping.h  RawMap.h
src/Modules/NavBase/Mapping/src/: BaseOdometry.cpp  BuildMap.cpp  Calibrate.cpp  LaserAutoMapping.cpp  LaserOdometry.cpp  (+3 more)
src/Modules/NavBase/Network/: Network.pro
src/Modules/Ndt/ndt_omp/: CMakeLists.txt  ndt_omp.pro
src/Modules/Ndt/ndt_oru/: CMakeLists.txt  ndt_oru.pro
src/Modules/Scan/: CMakeLists.txt
src/Modules/Scan/include/: BasObject.h  LineElement.h  LiveObjects.h  PostureGauss.h  RawScan.h  RawScanData.h  ScanPointCloud.h  ScannerParam.h  StaticObjects.h  StockedObjects.h
src/Modules/Scan/src/: BasObject.cpp  RawScan.cpp  ScannerParam.cpp  misc.cpp
src/Modules/SoftPls/: CMakeLists.txt
src/Modules/SoftPls/include/: AvoidObstacle.h
src/Modules/SoftPls/src/: AvoidObstacle.cpp  PLS.cpp
src/Modules/Tools/: CMakeLists.txt
src/Modules/Tools/include/: Archive.h  Combination.h  DebugTrace.h  FitLine.h  LinuxSetting.h  PlatformControl.h  Project.h  StampedPosture.h  TimeStamp.h  Tools.h  afxsock.h  date_time_converter.h  hh.h  misc.h  time_patch.h  version_converter.h
src/Modules/Tools/src/: AbstractParameter.cpp  Gpio.cpp  Tools.cpp  pose_graph_2d_1.cpp  time_patch.cpp
src/Modules/World/: CMakeLists.txt  World.pro
src/Modules/World/include/: ArcPath.h  GenericPath.h  LazySPath.h  LinePath.h  Node.h  Path.h  PathBase.h  SidePath.h  SplinePath.h  UnknownPath.h  Vertex.h  World.h
src/Modules/World/src/: BlockingMan.cpp  GenericPath.cpp  LinePath.cpp  NodeBase.cpp  RfId.cpp  Route.cpp  RouterRules.cpp  SPath.cpp  SidePath.cpp  UnknownPath.cpp  World.cpp
(+611 files in other folders)
